--- a/index.html
+++ b/index.html
@@ -1,116 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Mario Game</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-
-        canvas {
-            display: block;
-        }
-    </style>
-</head>
-
-<body>
-    <canvas id="gameCanvas"></canvas>
-    <script>
-        // Get the canvas and set up the context
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
-
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-
-        // Game variables
-        const gravity = 0.5;
-        const playerSpeed = 5;
-        const jumpHeight = 15;
-
-        let player = {
-            x: 50,
-            y: canvas.height - 100,
-            width: 50,
-            height: 50,
-            velocityX: 0,
-            velocityY: 0,
-            isJumping: false,
-            color: 'blue'
-        };
-
-        // Keys
-        let keys = {
-            left: false,
-            right: false,
-            up: false
-        };
-
-        // Event listeners for key presses
-        window.addEventListener('keydown', function (e) {
-            if (e.code === 'ArrowLeft') keys.left = true;
-            if (e.code === 'ArrowRight') keys.right = true;
-            if (e.code === 'Space') keys.up = true;
-        });
-
-        window.addEventListener('keyup', function (e) {
-            if (e.code === 'ArrowLeft') keys.left = false;
-            if (e.code === 'ArrowRight') keys.right = false;
-            if (e.code === 'Space') keys.up = false;
-        });
-
-        // Function to update the player's position
-        function updatePlayer() {
-            if (keys.left) player.velocityX = -playerSpeed;
-            else if (keys.right) player.velocityX = playerSpeed;
-            else player.velocityX = 0;
-
-            // Jump logic
-            if (keys.up && !player.isJumping) {
-                player.isJumping = true;
-                player.velocityY = -jumpHeight;
-            }
-
-            // Apply gravity
-            player.velocityY += gravity;
-
-            // Update position
-            player.x += player.velocityX;
-            player.y += player.velocityY;
-
-            // Collision with the ground
-            if (player.y + player.height >= canvas.height) {
-                player.y = canvas.height - player.height;
-                player.isJumping = false;
-            }
-        }
-
-        // Function to draw the player
-        function drawPlayer() {
-            ctx.fillStyle = player.color;
-            ctx.fillRect(player.x, player.y, player.width, player.height);
-        }
-
-        // Game loop
-        function gameLoop() {
-            // Clear the canvas
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            // Update and draw the player
-            updatePlayer();
-            drawPlayer();
-
-            requestAnimationFrame(gameLoop);
-        }
-
-        // Start the game loop
-        gameLoop();
-
-    </script>
-</body>
-
-</html>
+Griffiths, K. M., et al. (2008).* This study focuses on the relationship between mental health literacy and stigma, demonstrating that increased awareness and understanding of mental health conditions can reduce stigma in both urban and rural populations. It highlights how public education initiatives can challenge stereotypes and misconceptions about mental illnes
+Shidhaye, R., & Kermode, M. (2013).* The authors discuss the mental health treatment gap in India, with an emphasis on rural areas. They highlight how education about mental health can improve recognition and reduce the stigma associated with seeking treatment. The study also addresses gender differences in mental health service utilizati
+Das, S., et al. (2016).* This paper explores the public perception of mental illness in India and finds that mental health literacy is extremely low in rural areas. The authors suggest that education campaigns targeting rural populations could significantly reduce stigma and improve mental health outcomes, particularly among wom
+Raguram, R., et al. (1996).* This ethnographic study examines community perceptions of mental illness in rural southern India, focusing on the role of cultural beliefs and the social consequences of mental health stigma. It emphasizes how traditional gender roles influence perceptions of mental illness, with women often facing greater stig
+Lauber, C., & Rössler, W. (2007).* A global perspective on mental health stigma, this paper compares mental health stigma in developing and developed countries. It highlights the influence of socio-economic factors, including education and gender, on the severity of stigma, suggesting that rural, less educated populations experience higher levels of mental health stig
+Banerjee, S. (2020).* This study investigates the gendered impact of mental health stigma in India, exploring how women disproportionately face the burden of both mental illness and the associated stigma. It discusses how women’s mental health is often overlooked, and how educational programs tailored to rural women could reduce stigma and improve mental health outcom
+Clement, S., et al. (2015).* A systematic review of interventions to reduce mental health stigma, with an emphasis on the importance of education. The paper suggests that targeted interventions aimed at specific populations, such as rural communities and women, are more effective in reducing stigma than general public awareness campaigns.
